content/v8.x/el-GR/doc/api/inspector.md
# Inspector

<!--introduced_in=v8.0.0-->

> Σταθερότητα: 1 - Πειραματικό

Η ενότητα `inspector` παρέχει ένα API για την αλληλεπίδραση με τον επιθεωρητή V8.

Μπορεί να αποκτηθεί πρόσβαση χρησιμοποιώντας:

```js
const inspector = require('inspector');
```

## inspector.open([port[, host[, wait]]])

* `port` {number} Η θύρα στην οποία θα ακούει ο επιθεωρητής για συνδέσεις. Προαιρετικό. **Προεπιλογή:** ότι είχε οριστεί στο CLI.
* `host` {string} Η διεύθυνση στην οποία θα ακούει ο επιθεωρητής για συνδέσεις. Προαιρετικό. **Προεπιλογή:** ότι είχε οριστεί στο CLI.
* `wait` {boolean} Αναμονή μέχρι να συνδεθεί ένας πελάτης. Προαιρετικό. **Προεπιλογή:** `false`.

Ενεργοποίηση του επιθεωρητή στην ορισμένη διεύθυνση και θύρα. Ισοδύναμο με την χρήση `node
--inspect=[[host:]port]`, αλλά μπορεί να γίνει και προγραμματιστικά αφού έχει ξεκινήσει η Node.

Αν το wait είναι ορισμένο ως `true`, θα περιμένει μέχρι να συνδεθεί ένας πελάτης στην θύρα του επιθεωρητή και να περάσει ο έλεγχος της ροής στον πελάτη εντοπισμού σφαλμάτων.

### inspector.close()

Απενεργοποίηση του επιθεωρητή. Περιμένει μέχρι να μην υπάρχουν πλέον ενεργές συνδέσεις.

### inspector.url()

Επιστρέφει το URL του ενεργού επιθεωρητή, ή `undefined` αν δεν υπάρχει κανένα.

## Class: inspector.Session

Το `inspector.Session` χρησιμοποιείται για την αποστολή μηνυμάτων στο back-end του επιθεωρητή V8 και την παραλαβή μηνυμάτων απόκρισης και ειδοποιήσεων.

### Constructor: new inspector.Session()
<!-- YAML
added: v8.0.0
-->

Δημιουργεί ένα νέο στιγμιότυπο της κλάσης `inspector.Session`. Η περίοδος λειτουργίας του επιθεωρητή, πρέπει να έχει συνδεθεί μέσω του [`session.connect()`][] για να μπορέσουν τα μηνύματα να σταλθούν στο backend του επιθεωρητή.

Το `inspector.Session` είναι ένας [`EventEmitter`][] με τα παρακάτω συμβάντα:

### Event: 'inspectorNotification'
<!-- YAML
added: v8.0.0
-->

* {Object} Το αντικείμενο του μηνύματος ειδοποίησης

Μεταδίδεται όταν ληφθεί μια οποιαδήποτε ειδοποίηση από τον επιθεωρητή V8.

```js
session.on('inspectorNotification', (message) => console.log(message.method));
// Debugger.paused
// Debugger.resumed
```

Επίσης, είναι δυνατό να γίνει εγγραφή μόνο στις ειδοποιήσεις με την συγκεκριμένη μέθοδο:

### Event: &lt;inspector-protocol-method&gt;
<!-- YAML
added: v8.0.0
-->

* {Object} Το αντικείμενο του μηνύματος ειδοποίησης

Μεταδίδεται όταν λαμβάνεται μια ειδοποίηση επιθεωρητή, στην οποία η τιμή του πεδίου της μεθόδου έχει οριστεί ως η τιμή του `<inspector-protocol-method>`.

The following snippet installs a listener on the [`Debugger.paused`][] event, and prints the reason for program suspension whenever program execution is suspended (through breakpoints, for example):

```js
session.on('Debugger.paused', ({ params }) => {
  console.log(params.hitBreakpoints);
});
// [ '/the/file/that/has/the/breakpoint.js:11:0' ]
```

### session.connect()
<!-- YAML
added: v8.0.0
-->

Συνδέεται σε μια περίοδο λειτουργίας του back-end του επιθεωρητή. Ένα exception θα εμφανιστεί αν υπάρχει ήδη μια ενεργή περίοδος λειτουργίας που έχει γίνει είτε μέσω του API είτε με τη σύνδεση κάποιου front-end μέσω της θύρας WebSocket του Επιθεωρητή.

### session.post(method\[, params\]\[, callback\])
<!-- YAML
added: v8.0.0
-->

* method {string}
* params {Object}
* callback {Function}

Αποστέλλει ένα μήνυμα στο back-end του επιθεωρητή. Το `callback` θα ειδοποιηθεί όταν ληφθεί μια απόκριση. To `callback` είναι μια συνάρτηση που δέχεται δυο προαιρετικές παραμέτρους - error και αποτέλεσμα με βάση το συγκεκριμένο μήνυμα.

```js
session.post('Runtime.evaluate', { expression: '2 + 2' },
             (error, { result }) => console.log(result));
// Output: { type: 'number', value: 4, description: '4' }
```

Η πιο πρόσφατη έκδοση του πρωτοκόλλου του επιθεωρητή V8 δημοσιεύεται στο [Chrome DevTools Protocol Viewer](https://chromedevtools.github.io/devtools-protocol/v8/).

Node.js inspector supports all the Chrome DevTools Protocol domains declared by V8. Οι τομείς του Chrome DevTools Protocol domain παρέχουν μια διεπαφή για αλληλεπίδραση με κάποιον από τους runtime agent που χρησιμοποιούνται για την επιθεώρηση της κατάστασης της εφαρμογής, και για την ακρόαση συμβάντων run-time.

### session.disconnect()
<!-- YAML
added: v8.0.0
-->

Άμεσος τερματισμός της περιόδου λειτουργίας. Όλα τα μηνύματα callback, θα κληθούν με ένα error. Για να ξαναγίνει δυνατή η αποστολή μηνυμάτων, θα πρέπει να κληθεί το [`session.connect()`]. Οι επανασυνδεδεμένες συνεδρίες θα χάσουν την κατάσταση του επιθεωρητή, όπως τους ενεργοποιημένους agent ή ρυθμισμένα σημεία διακοπής.

## Παράδειγμα χρήσης

### CPU Profiler

Εκτός από τον εντοπισμό σφαλμάτων, διάφοροι άλλοι δημιουργοί προφίλ είναι διαθέσιμοι μέσω του πρωτοκόλλου DevTools. Εδώ είναι ένα πολύ απλό παράδειγμα που δείχνει τον τρόπο χρήσης του [CPU profiler](https://chromedevtools.github.io/devtools-protocol/v8/Profiler):

```js
const inspector = require('inspector');

const session = new inspector.Session();
session.connect();

session.post('Profiler.enable', () => {
  session.post('Profiler.start', () => {
    // invoke business logic under measurement here...

    // λίγη ώρα αργότερα...
    session.post('Profiler.stop', ({ profile }) => {
      // write profile to disk, upload, etc.
    });
  });
});
```
